--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/monitoring": "^4.0.0",
     "@google-cloud/sql": "^0.10.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "mysql2": "^3.9.7",
